grammar/grammar.txt
program : classDef
        | classDef program

classDef : CLASS classHeader OBRACE optClassStatements CBRACE

classHeader : ID
            | ID EXTENDS ID

optClassStatements : classStatments
                   | EMPTY

classStatements : classStatement
                | classStatement classStatements

classStatement : accessMod VAR varList SEMICOLON
               | accessMod FUNCTION ID OPAREN optVarList CPAREN block

accessMod : PUBLIC
          | PRIVATE
          | PROTECTED
          | EMPTY

optVarList : varList
           | EMPTY

varList : varDef
        : varDef COMMA varList

varDef : ID
       | ID EQUALS expr

expr : unary
     | unary op expr

unary : idExpr postVar
      | INTEGER
      | REAL
      | STRING
      | uop unary
      | OPAREN expr CPAREN
      | NULL
      | THIS
      | NEW ID OPAREN optExprList CPAREN

idExpr : ID
       | ID OPAREN optExprList CPAREN
       | ID OBRACKET expr CBRACKET

postVar : PLUSPLUS
       | MINUSMINUS
       | EMPTY

optExprList : exprList
            | EMPTY

exprList : expr
         | expr COMMA exprList

uop : UMINUS
    | PLUSPLUS
    | MINUSMINUS
    | NOT

op : EQUALS
   | PLUS
   | MINUS
   | TIMES
   | DIVIDE
   | MODULUS
   | EXPONANT
   | DOT
   | LESS_THAN
   | GREATER_THAN
   | LESS_THAN_EQUAL
   | GREATER_THAN_EQUAL
   | EQUALSEQUALS
   | NOTEQUALS
   | LOGICAL_AND
   | LOGICAL_OR
   | BINARY_AND
   | BINARY_OR

block : OBRACE optStatements CBRACE

optStatements : statements
              | EMPTY

statements : statement
           | statement statements

statement : expr SEMICOLON
          | VAR varList SEMICOLON
          | IF OPAREN expr CPAREN block optElse
          | WHILE OPAREN expr CPAREN block
          | DO block WHILE OPAREN expr CPAREN SEMICOLON
          | RETURN expr SEMICOLON
          | DEFINE ID OPAREN optVarList CPAREN block

optElse : elseStatement
        | EMPTY

elseStatement : ELSE block
              | ELSE IF OPAREN expr CPAREN block optElse
